--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,4 +30,8 @@ body {
   .primary-orange-text-gradient {
     @apply text-transparent bg-clip-text bg-gradient-to-br from-primary-main from-20% via-30% to-color-alt-red
   }
+
+  .home-page-scroll-btn {
+    @apply text-white bg-primary-main/75 hover:bg-primary-main/50 rounded
+  }
 }
