Recipe Page Update
1. Cleaned up code
2. Created components folder for recipe components
3. Moved components to new folder
4. Blocked edit/delete/add from free users
5. Updated pricing page and profile page to reflect that base users no longer can customizer recipes
6.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,4 +51,8 @@ body {
     @apply border border-orange-200 shadow-lg shadow-primary-main/10
   }
 
+  .add-ingredient-instuction-btn {
+    @apply orange-border-shadow pl-4 pr-4 pt-2 pb-2 items-center space-x-1 bg-white border rounded-3xl hover:bg-gray-100 hover:duration-200
+  }
+
 }
