--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,12 +43,20 @@ body {
     @apply text-4xl lg:text-5xl
   }
 
+  .section-desc-title-size {
+    @apply text-lg lg:text-xl text-gray-700 font-semibold
+  }
+
   .section-desc-text-size {
-    @apply text-base lg:text-lg text-gray-600
+    @apply text-base lg:text-lg text-gray-600 
   }
 
   .orange-border-shadow {
     @apply border border-orange-200 shadow-lg shadow-primary-main/10
+  }
+
+  .alternate-orange-bg {
+    @apply bg-gradient-to-b from-orange-100 to-orange-200/50
   }
 
   .add-ingredient-instuction-btn {
