--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -111,7 +111,7 @@ body {
   }
 
   .recipe-information-container {
-    @apply grid grid-cols-2 items-center text-sm md:text-base gap-2 text-gray-700
+    @apply grid grid-cols-3 md:grid-cols-2 items-center text-sm md:text-base gap-2 text-gray-700
   }
   .recipe-information-container2 {
     @apply flex justify-between text-xs space-x-1 text-gray-500
