--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,6 +52,10 @@ body {
     @apply text-transparent bg-clip-text bg-gradient-to-br from-primary-main from-20% via-30% to-color-alt-red
   }
 
+  .faded-bg {
+    @apply bg-gradient-to-b from-orange-50 to-orange-100/50
+  }
+
   .primary-orange-gradient-bg {
     @apply bg-gradient-to-br from-primary-main from-20% via-30% to-color-alt-red
   }
@@ -119,6 +123,12 @@ body {
   }
   .recipe-information-container2 {
     @apply flex justify-between text-xs space-x-1 text-gray-500
+  }
+
+  /* Blog Components */
+
+  .blog-section-title {
+    @apply text-2xl text-gray-900 font-bold
   }
 
 }
