--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,6 +31,31 @@
   overflow: hidden;
 }
 
+.prose-lg ul {
+  list-style-type: disc; /* For bullet points */
+  margin-left: 1em; /* Ensure indentation */
+}
+
+.prose-lg ol {
+  list-style-type: decimal; /* For numbered lists */
+  margin-left: 1em; /* Ensure indentation */
+}
+
+.prose-lg a.primary {
+  background-color: orange;
+  color: white;
+  padding: 8px 16px;
+  border-radius: 4px;
+}
+
+.prose-lg a.secondary {
+  color: #FFA500;
+  border: 1px solid orange;
+  padding: 8px 16px;
+  border-radius: 4px;
+}
+
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
