--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -124,8 +124,8 @@ body {
 
 
   /* Recipe Page Components */
-  .recipe-page-container {
-    @apply border rounded-xl p-6 bg-gradient-to-b from-orange-100 to-orange-200/50 space-y-2 
+  .recipe-component-container {
+    @apply shadow-lg bg-gray-50 border-gray-100 border rounded-lg p-6 mb-8 
   }
 
   .recipe-page-link-icon {
