Recipe Page Update

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -128,6 +128,10 @@ body {
     @apply shadow-lg bg-gray-50 border-gray-100 border rounded-lg p-6 mb-8 
   }
 
+  .recipe-title-button {
+    @apply flex items-center gap-2 py-2 px-4 hover:bg-gray-100 w-1/2 justify-center border-gray-300
+  }
+
   .recipe-page-link-icon {
     @apply h-4 w-4 md:h-5 md:w-5
   }
