--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -87,7 +87,7 @@ body {
   }
 
   .home-page-scroll-btn {
-    @apply text-white bg-primary-main/75 hover:bg-primary-main/50 rounded
+    @apply text-white bg-primary-main/75 hover:bg-primary-main/50 rounded-md
   }
 
   .home-scroll-container {
